- Delete keyboard shortcut disabled in tasks grid if deleting is not allowed for one of the selected tasklists
- Hide contact photos folder from file manager
- Some attachments missing 1 byte.
- Customfield blocks: will still work after changing the containing contact's/company's name.
- Address Book: More debugging possibilities when sending mails using the Newsletter feature.

08-07-2013 4.2.6
- Replace {autoid} tag on apply in project dialog
- Disabled the delete key in the tickets dialog if the user has no manage permission on the module.
- Fixed display of contact photo in email when quicklink is disabled
- Users can only add bookmark categories when they have write permission on the bookmark module.
- Users can only add views when they have write permission on the calendar module.
- Added percentage complete for tasks in calendar
- For the calendar properties window: Show "None" in the Caldav Tasklist selection when tasklist_id is 0
- Email Sieve: Fix to always use custom response subject when $config['sieve_vacation_subject'] is enabled in config.php .
- Fixed problem with rights of the config.php file when creating a new installation in the servermanager
- Email: Change label of "show unread" button when activated.
- Billing: Removed total and costcode from the order displaypanel because of too much data that is displayed
- Z-Push Admin: Added searchbar to devicesGrid
- Calendar/Tasks: Added checkbox in calendar settings to choose if you want to display completed tasks in the calendar or not.
- Zpush-admin: Show used AS version also in the Grid
- to work around office login prompt: http://support.microsoft.com/kb/2019105/en-us 
  never use inline on IE with office documents because it will prompt for authentication.
- Timeregistration: Added toggle button so the grid can be displayed next to the form instead of underneath it.
- ZPush: Fixed Grey appointments on iphone